Rewire so more places don't need to know scratch vs. data vs. metadata